# ssvm-nodejs-starter

./: Cargo.toml  README.md
node/: app.js
node/public/: base64.js  index.html
src/: lib.rs
