[package]
name = "recognize-number"
version = "0.1.0"
authors = ["chirsz-ever"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "recognize_number"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
nalgebra = "0.22"
typenum  = "1.12"
lazy_static = "1.4"
