[package]
name = "recognize-number"
version = "0.1.0"
authors = ["chirsz-ever"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "recognize_number"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
rulinalg     = "0.4.2"
lazy_static  = "1.4"
base64       = "0.12"
